--- a/WebApp.Site/src/app/feature-components/registry-form/registry-form.component.css
+++ b/WebApp.Site/src/app/feature-components/registry-form/registry-form.component.css
@@ -2,3 +2,8 @@
 :host ::ng-deep .p-tieredmenu .p-menuitem.p-menuitem-active > .p-menuitem-link {
   width: 250px !important;
 }
+
+label {
+  font-size: 0.8rem;
+  margin-left: 1px;
+}
