--- a/WebApp.Site/src/app/pages/login/login.component.html
+++ b/WebApp.Site/src/app/pages/login/login.component.html
@@ -19,8 +19,10 @@
       </div>
 
       <div class="col-12 flex flex-row justify-content-end">
+        <!-- hover:text-blue-400 hover:underline cursor-pointer -->
         <a
-          class="text-blue-500 hover:text-blue-400 font-semibold no-underline hover:underline cursor-pointer mt-2 mb-4 mr-1 text-xs"
+          class="text-blue-500 font-semibold no-underline mt-2 mb-4 mr-1 text-xs"
+          [pTooltip]="'👨‍💻🛠️🚧'"
           >Esqueci a senha</a
         >
       </div>
