--- a/WebApp.Site/src/app/feature-components/analytics-values/analytics-values.component.html
+++ b/WebApp.Site/src/app/feature-components/analytics-values/analytics-values.component.html
@@ -2,9 +2,9 @@
   <div class="grid" style="margin-top: 1px;">
     <div class="col-12 sm:col-4" *ngFor="let card of cards">
       <div class="surface-card shadow-2 p-2 border-round" [class]="card.title == 'Despesas' ? 'card-box' : ''">
-        <div class="flex justify-content-between mb-3">
+        <div class="flex justify-content-between align-items-center mb-1">
           <div>
-            <span class="block text-500 font-medium mb-3">{{
+            <span class="block text-500 font-medium mb-2">{{
               card.title
             }}</span>
             <div class="text-900 font-medium text-xl {{ card.textColor }}">
@@ -15,7 +15,7 @@
             class="flex align-items-center justify-content-center {{
               card.bgColor
             }} border-round"
-            style="width: 2rem; height: 2rem"
+            style="width: 2.5rem; height: 2.5rem"
           >
             <i [ngClass]="card.icon"></i>
           </div>
