update management component

--- a/WebApp.Site/src/app/pages/login/login.component.html
+++ b/WebApp.Site/src/app/pages/login/login.component.html
@@ -1,8 +1,8 @@
 <div
   class="h-screen w-full background-page flex align-items-center justify-content-center"
 >
-  <div class="w-20rem h-21rem bg-gray-50 p-3 border-round-lg">
-    <div class="flex flex-row justify-content-center mb-5">
+  <div class="w-20rem h-22rem bg-gray-50 p-3 border-round-lg">
+    <div class="flex flex-row justify-content-center mb-5 mt-3">
       <h1 class="text-2xl font-style">Moneyapp</h1>
     </div>
     <form [formGroup]="loginForm" class="flex grid formgrid p-fluid h-14rem">
