--- a/WebApp.Site/src/app/pages/login/login.component.html
+++ b/WebApp.Site/src/app/pages/login/login.component.html
@@ -1,5 +1,5 @@
 <div
-  class="h-screen w-full background-page flex align-items-center justify-content-center"
+  class="h-screen w-full background-page flex flex-column align-items-center justify-content-center"
 >
   <div class="w-20rem h-22rem bg-gray-50 p-3 border-round-lg">
     <div class="flex flex-row justify-content-center mb-5 mt-3">
@@ -48,6 +48,7 @@
       ></p-button>
     </div>
   </div>
+  <span class="text-white font-medium footer">©Developed by Rafa</span>
 </div>
 
 <p-toast></p-toast>
