--- a/WebApp.Site/src/app/pages/management/management.component.html
+++ b/WebApp.Site/src/app/pages/management/management.component.html
@@ -35,6 +35,7 @@
     </p-tabView>
   </div>
 </div>
+<span class="text-white font-medium footer">© Developed by Rafa</span>
 
 <p-dialog
   [(visible)]="visible"
