--- a/WebApp.Site/src/app/feature-components/table/table.component.html
+++ b/WebApp.Site/src/app/feature-components/table/table.component.html
@@ -56,8 +56,10 @@
           class="px-1 p-0"
         >
           <p-tag
-            [value]="manipulateValue(registry, column)"
-            styleClass="bg-gray-600"
+            [value]="manipulateValue(registry, column)?.name"
+            [style]="{
+              'background-color': manipulateValue(registry, column)?.color
+            }"
           ></p-tag>
         </td>
 
@@ -78,7 +80,7 @@
 
   <ng-template pTemplate="emptymessage">
     <tr>
-      <td colspan="7" style="text-align: center">{{ emptyMessage }}</td>
+      <td colspan="7" style="text-align: center">{{ emptyTableMessage }}</td>
     </tr>
   </ng-template>
 </p-table>
