adjust colums  // import char module

--- a/WebApp.Site/src/app/feature-components/table/table.component.html
+++ b/WebApp.Site/src/app/feature-components/table/table.component.html
@@ -46,7 +46,7 @@
           *ngIf="!column.useTag"
           class="px-3 p-0"
         >
-          <span [class]="setTextColor(registry, column)">
+          <span [class]="setTextColor(registry, column)" [pTooltip]="registry[column.field]">
             {{ manipulateValue(registry, column) }}
           </span>
         </td>
