--- a/WebApp.Site/src/app/pages/login/login.component.scss
+++ b/WebApp.Site/src/app/pages/login/login.component.scss
@@ -3,8 +3,8 @@
   left: 0;
   bottom: 0;
   width: 100%;
-  color: #fff; /* Cor do texto do rodapé */
-  text-align: center; /* Alinhamento do texto */
+  color: #fff;
+  text-align: center;
   padding-bottom: 5px;
   font-size: 12px;
 }
